syntax = "proto3";

package parcel;

option go_package = "./pkg/pb";

service ParcelService {
    rpc CreateParcel(CreateParcelRequest) returns (CreateParcelResponse) {}
    rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
    rpc DeliveryStage(DeliveryStageRequest) returns (DeliveryStageResponse) {}

 }

 message CreateParcelRequest {
    string description = 1;
    string sku = 2;
    int64 queque = 3;
    int64 cost = 4;
    string pickup_address = 5;
    string delivery_address = 6;
    string pickup_time = 7;
    string owner = 8;
    string driver = 9;
    string delivery_stage =10;
}

message CreateParcelResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}

// FindOne

message FindOneData {
    int64 id = 1;
    string sku = 2;
    string description = 3;
    int64 queque = 4;
    int64 cost = 5;
    string pickup_address = 6;
    string delivery_address = 7;
    string pickup_time = 8;
    string owner = 9;
    string driver = 10;
    string delivery_stage =11;
}

message FindOneRequest { int64 id = 1; }

message FindOneResponse {
    int64 status =1;
    string error = 2;
    FindOneData data = 3;
}

// DeliveryStage

message DeliveryStageRequest {
    int64 id = 1;
    int64 orderId =2;
    string delivery_stage = 3;


}

message DeliveryStageResponse {
     int64 status = 1;
     string error = 2;
     string delivery_stage = 3;

}